--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -3,11 +3,15 @@ kind: Workload
 metadata:
   name: spring-kafka-producer
   labels:
-    apps.tanzu.vmware.com/workload-type: server
+    apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/part-of: spring-kafka-producer
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/auto-configure-actuators: "true"
 spec:
+  build:
+    env:
+      - name: BP_JVM_VERSION
+        value: "17"
   params:
     - name: annotations
       value:
